--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -70,7 +70,13 @@
     "Conclusion: if the data is short but has a trend, drift is better than naive.\n",
     "\n",
     "Category 2: contains zeroes and has high seasonality\n",
-    "\n",
+    "Model 1: Seasonal Naive\n",
+    "In a series with strong seasonality, simply repeat the value of the previous season, which is suitable for time series containing zero values.\n",
+    "Model 2: ETS (Exponential Smoothing)\n",
+    "If you choose models such as ETS(M,A,N) or ETS(A,A,N), you can handle series with seasonality and non-negative numbers.\n",
+    "But note: some ETS combinations are sensitive to zero values (such as multiplicative models) and need to use additive forms.\n",
+    "Model 3: TSLM\n",
+    "Seasonal dummy variables can be introduced to model strong seasonality, which is also more robust to zero values.\n",
     "\n",
     "Category 3:\n",
     "\n",
