--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -60,32 +60,61 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Question C\n",
+    "## Question C\n",
     "\n",
-    "Category 1: shorter than 2 seasonality periods\n",
+    "### Category 1: shorter than 2 seasonality periods\n",
     "#### Models: Drift\n",
     "Applicable situations: short series with linear trend.\n",
     "Working principle: use the slope of the line connecting the first and last points to linearly extrapolate future values.\n",
     "Advantages: can capture simple trend components.\n",
     "Conclusion: if the data is short but has a trend, drift is better than naive.\n",
     "\n",
-    "Category 2: contains zeroes and has high seasonality\n",
-    "Model 1: Seasonal Naive\n",
+    "### Category 2: contains zeroes and has high seasonality\n",
+    "#### Model 1: Seasonal Naive\n",
     "In a series with strong seasonality, simply repeat the value of the previous season, which is suitable for time series containing zero values.\n",
-    "Model 2: ETS (Exponential Smoothing)\n",
+    "\n",
+    "#### Model 2: ETS (Exponential Smoothing)\n",
     "If you choose models such as ETS(M,A,N) or ETS(A,A,N), you can handle series with seasonality and non-negative numbers.\n",
     "But note: some ETS combinations are sensitive to zero values (such as multiplicative models) and need to use additive forms.\n",
-    "Model 3: TSLM\n",
+    "\n",
+    "#### Model 3: TSLM\n",
     "Seasonal dummy variables can be introduced to model strong seasonality, which is also more robust to zero values.\n",
     "\n",
-    "Category 3:\n",
+    "### Category 3: high seasonality and only positive values\n",
+    "#### Model 1: Seasonal Naive\n",
+    "Suitable for simple repetition of the previous season's structure, simple calculation, and robust effect.\n",
     "\n",
+    "#### Model 2: ETS (such as ETS(M,A,M))\n",
+    " Multiplicative seasonality is suitable for positive data and can describe the change in the amplitude of seasonal fluctuations over time.\n",
     "\n",
-    "Category 4:\n",
+    "#### Model 3: ARIMA with seasonal component (SARIMA)\n",
+    "Suitable for time series with high seasonality, but requires sufficient data support.\n",
     "\n",
+    "### Category 4: low or no seasonality and zeroes\n",
+    "#### Model 1: Naive\n",
+    "If the change is small and there is no trend, the naive prediction effect is good.\n",
     "\n",
-    "Category 5:\n",
+    "#### Model 2: Drift\n",
+    "It is better when the data has linear changes.\n",
     "\n",
+    "#### Model 3: Mean\n",
+    "When the data has no season and no trend, the mean is simple and effective.\n",
+    "\n",
+    "#### Model 4: ARIMA\n",
+    "After differencing, it can handle data without obvious structure but containing zeros, but it should be noted that the model setting cannot use multiplication terms (multiplication models cannot handle zeros).\n",
+    "\n",
+    "### Category 5: has trend no seasonality; with season but has negative vales; with not obvious trend but the noise is large\n",
+    "#### Model 1: ETS\n",
+    "Applicable to most structured time series (with or without trend and seasonality, flexible).\n",
+    "\n",
+    "#### Model 2: ARIMA\n",
+    "Applicable to non-stationary but differentiable series.\n",
+    "\n",
+    "#### Model 3: TSLM\n",
+    "If appropriate exogenous variables (such as trend and seasonal dummy) can be designed, the explanatory power of the model can be enhanced.\n",
+    "\n",
+    "#### Model 4: Mean\n",
+    "A simple baseline model, suitable for benchmark or extremely volatile series.\n",
     "\n"
    ],
    "id": "83aed0a42c2eaebe"
