--- a/Yue.ipynb
+++ b/Yue.ipynb
@@ -200,8 +200,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T19:01:08.396645Z",
-     "start_time": "2025-06-11T19:01:08.255504Z"
+     "end_time": "2025-06-11T19:20:03.644436Z",
+     "start_time": "2025-06-11T19:20:03.506288Z"
     }
    },
    "cell_type": "code",
@@ -226,9 +226,11 @@
     "\n",
     "# filter fs >= 0.5\n",
     "high_seasonal_ids = seasonality_results[seasonality_results['fs'] >= 0.5]['unique_id']\n",
+    "low_seasonal_ids = seasonality_results[seasonality_results['fs'] < 0.5]['unique_id']\n",
     "\n",
     "# Create df_seasonal with all the time series with high seasonality\n",
     "df_seasonal = df[df['unique_id'].isin(high_seasonal_ids)].copy()\n",
+    "df_low_seasonal = df[df['unique_id'].isin(low_seasonal_ids)].copy()\n",
     "\n",
     "df_seasonal\n"
    ],
@@ -238,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gm/_yp4_bjn6l7dvvpx97_5_c0c0000gn/T/ipykernel_34331/577325006.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/gm/_yp4_bjn6l7dvvpx97_5_c0c0000gn/T/ipykernel_34331/3941635920.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  seasonality_results = df.groupby('unique_id').apply(\n"
      ]
     },
@@ -357,12 +359,145 @@
        "</div>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:24:05.764070Z",
+     "start_time": "2025-06-11T19:24:05.755803Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_low_seasonal",
+   "id": "299b4bf8e1978a67",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      unique_id         ds        y\n",
+       "55        C1003 2013-01-01  10203.0\n",
+       "56        C1003 2013-02-01   9169.0\n",
+       "57        C1003 2013-03-01  10428.0\n",
+       "58        C1003 2013-04-01   9714.0\n",
+       "59        C1003 2013-05-01  10489.0\n",
+       "...         ...        ...      ...\n",
+       "14160     C6918 2017-03-01   2847.0\n",
+       "14161     C6918 2017-04-01   2940.0\n",
+       "14162     C6918 2017-05-01   2980.0\n",
+       "14163     C6918 2017-06-01   3120.0\n",
+       "14164     C6918 2017-07-01   2843.0\n",
+       "\n",
+       "[1238 rows x 3 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>C1003</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>10203.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>C1003</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>9169.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>C1003</td>\n",
+       "      <td>2013-03-01</td>\n",
+       "      <td>10428.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>C1003</td>\n",
+       "      <td>2013-04-01</td>\n",
+       "      <td>9714.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>C1003</td>\n",
+       "      <td>2013-05-01</td>\n",
+       "      <td>10489.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14160</th>\n",
+       "      <td>C6918</td>\n",
+       "      <td>2017-03-01</td>\n",
+       "      <td>2847.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14161</th>\n",
+       "      <td>C6918</td>\n",
+       "      <td>2017-04-01</td>\n",
+       "      <td>2940.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14162</th>\n",
+       "      <td>C6918</td>\n",
+       "      <td>2017-05-01</td>\n",
+       "      <td>2980.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14163</th>\n",
+       "      <td>C6918</td>\n",
+       "      <td>2017-06-01</td>\n",
+       "      <td>3120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14164</th>\n",
+       "      <td>C6918</td>\n",
+       "      <td>2017-07-01</td>\n",
+       "      <td>2843.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1238 rows × 3 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -374,6 +509,79 @@
    "id": "99f2bdf485f141d"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:26:47.794734Z",
+     "start_time": "2025-06-11T19:26:47.787934Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Filter the time series which has at least 1 value is 0\n",
+    "zero_ids = df_low_seasonal[df_low_seasonal['y'] == 0]['unique_id'].unique()\n",
+    "\n",
+    "# Create df_4 as category 4\n",
+    "df_4 = df_low_seasonal[df_low_seasonal['unique_id'].isin(zero_ids)].copy()\n",
+    "\n",
+    "if df_4.empty:\n",
+    "    print(\"No low or no seasonality time series with 0\")\n",
+    "\n",
+    "df_4"
+   ],
+   "id": "3156c9be538095f2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No low or no seasonality time series with 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unique_id, ds, y]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -382,6 +590,79 @@
     "models: ARIMA, TSLM, Mean"
    ],
    "id": "c91428dbfaa368cc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T19:28:07.576335Z",
+     "start_time": "2025-06-11T19:28:07.569957Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Filter the time series which has at least 1 negative value\n",
+    "negative_ids = df[df['y'] < 0]['unique_id'].unique()\n",
+    "\n",
+    "# Create df_5 as category 5\n",
+    "df_5 = df[df['unique_id'].isin(negative_ids)].copy()\n",
+    "\n",
+    "if df_5.empty:\n",
+    "    print(\"No time series with negative values\")\n",
+    "\n",
+    "df_5"
+   ],
+   "id": "cd64090f91a6b56e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No time series with negative values\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unique_id, ds, y]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
   }
  ],
  "metadata": {
