--- a/Test-2.ipynb
+++ b/Test-2.ipynb
@@ -1100,18 +1100,22 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-13T16:04:58.155181Z",
-     "start_time": "2025-06-13T16:04:57.801770Z"
+     "end_time": "2025-06-13T16:08:56.628772Z",
+     "start_time": "2025-06-13T16:08:56.400642Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
-    "def forecast_and_plot_best_models(best_models_df, ts_dict, forecast_horizon=12):\n",
+    "def forecast_and_plot_best_models(best_models_df, ts_dict, forecast_horizon=12, output_dir=\"forecast_outputs\"):\n",
     "    \"\"\"\n",
-    "    Forecast using the best model per time series and plot the results.\n",
+    "    Forecast using the best model per time series, plot the results,\n",
+    "    and save forecasted values to CSV files.\n",
     "    \"\"\"\n",
+    "    os.makedirs(output_dir, exist_ok=True)  # Create output directory if it doesn't exist\n",
+    "\n",
     "    for idx, row in best_models_df.iterrows():\n",
     "        ts_id = row['ts_id']\n",
     "        best_model = row['model']\n",
@@ -1154,6 +1158,13 @@
     "            plt.tight_layout()\n",
     "            plt.show()\n",
     "\n",
+    "            # Save forecast to CSV\n",
+    "            forecast_df = forecast_series.reset_index()\n",
+    "            forecast_df.columns = [\"Month\", \"Forecast\"]\n",
+    "            output_path = os.path.join(output_dir, f\"{ts_id}_forecast_{best_model}.csv\")\n",
+    "            forecast_df.to_csv(output_path, index=False)\n",
+    "            print(f\"Saved forecast for {ts_id} using {best_model} to {output_path}\")\n",
+    "\n",
     "        except Exception as e:\n",
     "            print(f\"Error forecasting {ts_id} with {best_model}: {e}\")\n",
     "\n",
@@ -1172,6 +1183,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved forecast for C1038 using seasonal naive to forecast_outputs/C1038_forecast_seasonal naive.csv\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 1000x500 with 1 Axes>"
@@ -1182,6 +1200,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved forecast for C2716 using naive to forecast_outputs/C2716_forecast_naive.csv\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 1000x500 with 1 Axes>"
@@ -1190,9 +1215,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved forecast for C6022 using drift to forecast_outputs/C6022_forecast_drift.csv\n"
+     ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 31
   }
  ],
  "metadata": {
