--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -47,56 +47,61 @@
     "\n",
     "### Category 1: shorter than 2 seasonality periods\n",
     "#### Models: Drift\n",
-    "Applicable situations: short series with linear trend.\n",
-    "Working principle: use the slope of the line connecting the first and last points to linearly extrapolate future values.\n",
-    "Advantages: can capture simple trend components.\n",
-    "Conclusion: if the data is short but has a trend, drift is better than naive.\n",
+    "Drift applicable situations: short series with linear trend.\n",
+    "\n",
+    "Analysis: The forecasting models such as Mean, Naive, and Drift can all be used for short series, among which Mean and Naive are suitable for data without trend and seasonality.\n",
+    "\n",
+    "Conclusion: if the data is short but has a trend, drift is better than naive and mean.\n",
     "\n",
     "### Category 2: contains zeroes and has high seasonality\n",
     "#### Model 1: Seasonal Naive\n",
+    "Seasonal Naive applicable situations: with high seasonality and no trend.\n",
     "In a series with strong seasonality, simply repeat the value of the previous season, which is suitable for time series containing zero values.\n",
     "\n",
     "#### Model 2: ETS (Exponential Smoothing)\n",
-    "If you choose models such as ETS(M,A,N) or ETS(A,A,N), you can handle series with seasonality and non-negative numbers.\n",
-    "But note: some ETS combinations are sensitive to zero values (such as multiplicative models) and need to use additive forms.\n",
+    "ETS applicable situations: with seasonality and trend (multiplicative and additive).\n",
     "\n",
-    "#### Model 3: TSLM\n",
-    "Seasonal dummy variables can be introduced to model strong seasonality, which is also more robust to zero values.\n",
+    "Some ETS combinations are sensitive to zero values (such as multiplicative models) and need to use additive forms.\n",
     "\n",
     "### Category 3: high seasonality and only positive values\n",
     "#### Model 1: Seasonal Naive\n",
-    "Suitable for simple repetition of the previous season's structure, simple calculation, and robust effect.\n",
+    "Seasonal Naive applicable situations: with high seasonality and no trend.\n",
+    "\n",
+    "It is suitable for simple repetition of the previous season's structure, simple calculation, and robust effect.\n",
     "\n",
     "#### Model 2: ETS (such as ETS(M,A,M))\n",
-    " Multiplicative seasonality is suitable for positive data and can describe the change in the amplitude of seasonal fluctuations over time.\n",
+    "ETS applicable situations: with seasonality and trend (multiplicative and additive).\n",
     "\n",
-    "#### Model 3: ARIMA with seasonal component (SARIMA)\n",
-    "Suitable for time series with high seasonality, but requires sufficient data support.\n",
+    "Multiplicative seasonality is suitable for positive data and can describe the change in the amplitude of seasonal fluctuations over time.\n",
+    "\n",
+    "#### Model 3: AutoARIMA\n",
+    "ARIMA applicable situations: without trend and seasonality.\n",
+    "SARIMA is suitable for time series with high seasonality, but requires sufficient data support.\n",
+    "AutoARIMA will automatically perform differencing and can handle trendless and seasonal data.\n",
     "\n",
     "### Category 4: low or no seasonality and zeroes\n",
     "#### Model 0: Naive\n",
+    "Naive applicable situations: without seasonality and trend.\n",
     "If the change is small and there is no trend, the naive prediction effect is good.\n",
     "Since we will compare it with the Naive model later, it is not included here.\n",
     "\n",
     "#### Model 1: Drift\n",
-    "It is better when the data has linear changes.\n",
+    "Drift applicable situations: with linear trend and no seasonality.\n",
     "\n",
     "#### Model 2: Mean\n",
     "When the data has no season and no trend, the mean is simple and effective.\n",
     "\n",
-    "#### Model 3: ARIMA\n",
+    "#### Model 3: AutoARIMA\n",
     "After differencing, it can handle data without obvious structure but containing zeros, but it should be noted that the model setting cannot use multiplication terms (multiplication models cannot handle zeros).\n",
     "\n",
     "### Category 5: with negative vales\n",
-    "#### Model 1: ARIMA\n",
-    "Applicable to non-stationary but differentiable series.\n",
+    "#### Model 1: AutoARIMA\n",
+    "AutoARIMA will automatically perform differencing and can handle trendless and seasonal data.\n",
     "\n",
-    "#### Model 2: TSLM\n",
-    "Applicable to time series with negative values.\n",
+    "#### Model 2: Mean\n",
+    "Mean applicable situations: without trend and seasonality, and can be used for negative values.\n",
     "\n",
-    "#### Model 3: Mean\n",
-    "A simple baseline model, suitable for benchmark or extremely volatile series.\n",
-    "\n"
+    "In addition, TSLM model depends on exog data, such as promotion campaign, we don't have that kind of data, so we will not consider it in any category."
    ],
    "id": "83aed0a42c2eaebe"
   }
