--- a/Test-1.ipynb
+++ b/Test-1.ipynb
@@ -100,9 +100,9 @@
     "categories = {\n",
     "    'Category 1': [\"naive\", \"drift\"],\n",
     "    'Category 2': [\"naive\", \"ETS\", \"seasonal naive\"],\n",
-    "    'Category 3': [\"naive\", \"ARIMA\", \"ETS\", \"seasonal naive\"],\n",
-    "    'Category 4': [\"naive\", \"ARIMA\", \"drift\", \"mean\"],\n",
-    "    'Category 5': [\"naive\", \"ARIMA\", \"mean\"]\n",
+    "    'Category 3': [\"naive\", \"AutoARIMA\", \"ETS\", \"seasonal naive\"],\n",
+    "    'Category 4': [\"naive\", \"AutoARIMA\", \"drift\", \"mean\"],\n",
+    "    'Category 5': [\"naive\", \"AutoARIMA\", \"mean\"]\n",
     "}\n",
     "\n",
     "file_name, product_classes_to_forecast, metric = get_user_inputs()\n",
@@ -342,7 +342,7 @@
     "    return fitted_model.forecast(horizon)\n",
     "\n",
     "\n",
-    "def arima_forecast(series: pd.Series, horizon: int) -> np.ndarray:\n",
+    "def autoarima_forecast(series: pd.Series, horizon: int) -> np.ndarray:\n",
     "\n",
     "    df = pd.DataFrame({\n",
     "        'unique_id': ['ts1'] * len(series),\n",
@@ -353,7 +353,7 @@
     "    with tempfile.TemporaryDirectory() as tmpdir:\n",
     "        sf = StatsForecast(\n",
     "            models=[AutoARIMA(season_length=12)],\n",
-    "            freq='MS',  # 注意要匹配你的 index 频率（月初）\n",
+    "            freq='MS',\n",
     "            n_jobs=1\n",
     "        )\n",
     "        forecasts_df = sf.forecast(df=df, h=horizon)\n",
@@ -420,8 +420,8 @@
     "                        pred = seasonal_naive_forecast(train, forecast_horizon)\n",
     "                    elif model_name == \"ETS\":\n",
     "                        pred = ets_forecast(train, forecast_horizon)\n",
-    "                    elif model_name == \"ARIMA\":\n",
-    "                        pred = arima_forecast(train, forecast_horizon)\n",
+    "                    elif model_name == \"AutoARIMA\":\n",
+    "                        pred = autoarima_forecast(train, forecast_horizon)\n",
     "                    elif model_name == \"mean\":\n",
     "                        model = HistoricAverageModel()\n",
     "                        model.fit(train)\n",
